# livestream-splitter

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  SESSION_LOG.md  TESTING.md  activity-log.md  pyproject.toml  requirements.txt  setup.py  simple_validation.py  start_web_ui.sh  test_regression.py  test_validation.py  test_web_integration.py  test_web_ui.py
config/: default_config.yaml
docs/: README.md  development_log.md
docs/testing/: integration_test_results.md  setup_and_validation.md
examples/: basic_usage.sh  batch_config.yaml
src/stream_splitter/: __init__.py  cli.py  config.py  splitter.py  utils.py  video_processor.py
tests/: __init__.py  test_config.py
web/backend/: main.py
web/frontend/: index.html  script.js  style.css
